--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,4 @@
+/* My colour palette */
 :root{
     --Sky-grey:#D8D4D6;
     --Black:#231F20;
@@ -26,6 +27,9 @@ body{
     padding-top: 10px;
     margin-bottom: 20px;
     background: var(--Cool-grey);
+    position: relative;
+    overflow: hidden;
+    flex-wrap: wrap;
   }
   h1{
     font-size: 2.8rem;
@@ -73,12 +77,6 @@ body{
     position: relative;
 
   }
-
-  .container{
-    position: relative;
-    overflow: hidden;
-    flex-wrap: wrap;
-  }
   .Dev{
     position: absolute;
     bottom: 20px;
@@ -92,44 +90,46 @@ body{
     opacity: 0.75;
   }
 
+
+
+
   /* Styling applied to main content */
+  main {
+    display: flex;
+    min-height: calc(100vh - 40vh);
+  }
   main section{
     flex-wrap: wrap;
     display: flex;
   }
-  .main{
-    display: flex;
-    min-height: calc(100vh - 40vh);
+  p {
+    margin-top: 20px;
+    font-size: 18px;
+    margin-bottom: 150px;
   }
-
-  .main nav, main aside{
+  main nav{
     flex: 0 0 20vw;
-  }
-  .main nav{
     order: -1;
     margin-left: 30px;
     margin-top: 20px;
   }
+  main aside{
+    flex: 0 0 20vw;
+  }
+
   .profile {
     margin: 10px 10px 20px 40px;
     max-width: 500px;
     max-height: 150px; 
   }
-  p{
-    margin-top: 20px;
-    font-size: 18px;
-    margin-bottom: 150px;
-  }
+
   div{
     position: relative;
   }
   div img {
       display: block;
       max-width: 100%;
-      max-height: 100%;
       margin-bottom: 25px;
-      /* background-size: cover; */
-      /* background-position: center; */
   }
 
   article{
@@ -149,16 +149,31 @@ body{
       padding: 10px;
       font-size: 1.5rem;
   }
+  article section{
+    max-width: 40%;
+    max-height: 100px;
+    margin-bottom: 25px;
+    background-position: center;
+    flex-wrap: wrap;
+  }
+  article img {
+    transition: 0.3s;
 
-  section img{
+  }
+  article img:hover {
+    opacity: 0.3;
+    transition: 0.3s;
+  }
+  article section img{
     max-width: 400px;
     max-height: 400px;
     margin-bottom: 25px;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
   }
-  section{
-    
+  article section ul li {
+    list-style: none;
+    display: inline-block;
   }
   nav h2{
     font-size: 1.5rem;
@@ -171,37 +186,36 @@ body{
     font-size: 1.5rem;
     margin-bottom: 10px;
   }
-  div .card{
-    max-width: 50%;
-    max-height: 100px;
-    margin-bottom: 25px;
-    display: fixed;
-    background-position: center;
-    }
+
 
   footer{
-    position: absolute;
+    position: relative;
     left: 40px;
-    bottom: -1000px;
-    display: inline-block;
+    bottom: -300px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding-bottom: 50px;
     }
   
     footer h2{
       display: inline-block;
     }
 
-    footer li{
-      display: inline-block;
+    footer ul li{
+      font-size: 1.5rem;
+      display: inline;
+      margin: -25px 300px 20px 300px; 
+      size: 1.5rem;
     }
     
     footer ul{
       list-style-type: none;
+      display: flex;
+      letter-spacing: 2px;
+
       margin-right: 20px;
   }
-  footer ul li{
-      display: inline-block;
-      margin:23px 20px 20px 20px;
-  }
+
   footer ul li a:link{
       color: var(--Black);
       transition: 0.3s;
